--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:coverage": "nyc npm test"
   },
   "preferGlobal": true,
-    "bin": {
+  "bin": {
     "btc-converter": "bin/main.js"
   },
   "nyc": {
@@ -51,7 +51,15 @@
     "eslint-plugin-import": "^2.6.1",
     "husky": "^0.11.9",
     "mocha": "^3.2.0",
+    "nock": "^9.2.3",
     "nyc": "^10.2.0",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "sinon": "^4.4.6",
+    "sinon-chai": "^3.0.0"
+  },
+  "dependencies": {
+    "commander": "^2.15.0",
+    "ora": "^2.0.0",
+    "request": "^2.85.0"
   }
 }
